--- a/.ebextensions-dev/00.makefiles.config
+++ b/.ebextensions-dev/00.makefiles.config
@@ -1,5 +1,5 @@
 files:
-    "/sbin/appstart" :
+    "/sbin/appstart":
         mode: "000755"
         owner: webapp
         group: webapp
@@ -9,4 +9,4 @@ files:
 
             # run app
             killalljava
-            java -Dfile.encoding=UTF-8 -jar $JAR_PATH
+            java -Dfile.encoding=UTF-8 -jar $JAR_PATHAR_PATH
