--- a/.ebextensions_dev/00.makefiles.config
+++ b/.ebextensions_dev/00.makefiles.config
@@ -5,7 +5,7 @@ files:
         group: webapp
         content: |
             #!/usr/bin/env bash
-            echo "/var/app/current/application.jar" >> $JAR_PATH
+            JAR_PATH=/var/app/current/application.jar
 
             # run app
             killalljava
