--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -1,14 +1,14 @@
-name: Growup dev CI/CD
+name: Growup Dev CI/CD
 
-on: #특정 브랜치에서 돌게
+on:
   pull_request:
-    types: [closed]  # 머지가 되면 돌도록
+    types: [closed]
   workflow_dispatch: # (2).수동 실행도 가능하도록
 
 jobs:
   build:
     runs-on: ubuntu-latest # (3).OS환경
-    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'develop'   #개발이므로 dev로 릴리즈면 릴리즈로
+    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'develop'
 
     steps:
       - name: Checkout
@@ -26,14 +26,14 @@ jobs:
 
       - name: Build with Gradle
         run: ./gradlew clean build -x test
-        shell: bash # (7).build시작
+        shell: bash # (7).build 시작
 
       - name: Get current time
         uses: 1466587594/get-current-time@v2
         id: current-time
         with:
-            format: YYYY-MM-DDTHH-mm-ss
-            utcOffset: "+09:00" # (8).build시점의 시간확보
+          format: YYYY-MM-DDTHH-mm-ss
+          utcOffset: "+09:00" # (8).build 시점의 시간확보
 
       - name: Show Current Time
         run: echo "CurrentTime=$"
@@ -41,21 +41,21 @@ jobs:
 
       - name: Generate deployment package
         run: |
-            mkdir -p deploy
-            cp build/libs/*.jar deploy/application.jar
-            cp Procfile deploy/Procfile
-            cp -r .ebextensions_dev deploy/.ebextensions
-            cp -r .platform deploy/.platform
-            cd deploy && zip -r deploy.zip .
+          mkdir -p deploy
+          cp build/libs/*.jar deploy/application.jar
+          cp Procfile deploy/Procfile
+          cp -r .ebextensions_dev deploy/.ebextensions
+          cp -r .platform deploy/.platform
+          cd deploy && zip -r deploy.zip .
 
-            - name: Beanstalk Deploy
-              uses: einaregilsson/beanstalk-deploy@v20
-              with:
-                aws_access_key: ${{ secrets.AWS_ACTION_ACCESS_KEY_ID }}
-                aws_secret_key: ${{ secrets.AWS_ACTION_SECRET_ACCESS_KEY }}
-                application_name: Growup-dev
-                environment_name: Growup-dev-env
-                version_label: github-action-${{ steps.current-time.outputs.formattedTime }}
-                region: ap-northeast-1
-                deployment_package: deploy/deploy.zip
-                wait_for_deployment: false
+      - name: Beanstalk Deploy
+        uses: einaregilsson/beanstalk-deploy@v20
+        with:
+          aws_access_key: ${{ secrets.AWS_ACTION_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_ACTION_SECRET_ACCESS_KEY }}
+          application_name: Growup-dev
+          environment_name: Growup-dev-env
+          version_label: github-action-${{ steps.current-time.outputs.formattedTime }}
+          region: ap-northeast-1
+          deployment_package: deploy/deploy.zip
+          wait_for_deployment: false
