--- a/.platform/nginx.conf
+++ b/.platform/nginx.conf
@@ -63,7 +63,7 @@ http {
 
       access_log    /var/log/nginx/access.log main;
 
-      client_header_timeout 60:;
+      client_header_timeout 60;
       client_body_timeout   60;
       keepalive_timeout     60;
       gzip                  off;
