--- a/.platform/nginx.conf
+++ b/.platform/nginx.conf
@@ -36,7 +36,7 @@ http {
 
       location / {
           proxy_pass          http://springboot;
-          add_header 'Access-Control-Allow-Origin' '*';
+          add_header 'Access-Control-Allow-Origin' 'http://localhost:3000, https://dev.jojoumc.shop ';
           add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
           add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
           proxy_http_version  1.1;
