--- a/.platform/nginx/nginx.conf
+++ b/.platform/nginx/nginx.conf
@@ -61,6 +61,8 @@ http {
           proxy_set_header      X-Forwarded-For $proxy_add_x_forwarded_for;
 
           proxy_set_header      Origin          "";
+
+          proxy_read_timeout 300;
       }
 
       access_log    /var/log/nginx/access.log main;
