todolist status 수정 api 구현

--- a/.platform/nginx/nginx.conf
+++ b/.platform/nginx/nginx.conf
@@ -36,7 +36,7 @@ http {
 
       location / {
           proxy_pass          http://springboot;
-          add_header 'Access-Control-Allow-Origin' 'http://localhost:3000, https://dev.jojoumc.shop' always;
+          add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' 'https://dev.jojoumc.shop' always;
           add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
           add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
 
