--- a/.platform/nginx/nginx.conf
+++ b/.platform/nginx/nginx.conf
@@ -52,6 +52,10 @@ http {
 
       location /call {
           proxy_pass            http://springboot/call;
+          add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
+          add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+          add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+
           proxy_http_version    1.1;
           proxy_set_header      Connection      $connection_upgrade;
           proxy_set_header      Upgrade         $http_upgrade;
