--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,11 @@ spring:
                 hbm2ddl:
                     auto: update
                 default_batch_fetch_size: 1000
-
+    servlet:
+        multipart:
+            enabled: true
+            max-file-size: 200MB
+            max-request-size: 300MB
     redis:
         host: ${REDIS_HOSTNAME}
         port: ${REDIS_PORT}
